<resources>
    <string name="app_name">Week4AppEM1974</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">ADD</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="car_make">Car Make</string>
    <string name="car_model">Car Model</string>
    <string name="car_cost">Car Cost ($)</string>
    <string name="udpate">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="view">VIEW</string>
</resources>
